// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fixtures build fixtures/compress 1`] = `
"Tree:
compress
  dist
    index.js
    index.js.map
    index.mjs
    index.mjs.map
  package.json
  src
    foo.ts
    index.ts

Output:
"
`;

exports[`fixtures build fixtures/compress 2`] = `
"function foobar(){return\\"foobar\\"}export{foobar};
//# sourceMappingURL=index.mjs.map
"
`;

exports[`fixtures build fixtures/compress 3`] = `
"exports.foobar=function foobar(){return\\"foobar\\"};
//# sourceMappingURL=index.js.map
"
`;

exports[`fixtures build fixtures/css-module 1`] = `
"Tree:
css-module
  dist
    index.js
    index.mjs
  package.json
  src
    declarations.d.ts
    index.ts
    main.css
    main.module.css

Output:
"
`;

exports[`fixtures build fixtures/css-module 2`] = `
"var css_248z = \\".foo {\\\\n    background: #f3f3f3;\\\\n}\\\\n\\";

var scoped = {\\"foo\\":\\"main-module_foo__alNSp\\"};

const index = () => {
    const el1 = document.createElement('div');
    el1.innerHTML = css_248z;
    const el2 = document.createElement('div');
    el2.className = scoped.foo;
};

export { index };
"
`;

exports[`fixtures build fixtures/css-module 3`] = `
"'use strict';

var css_248z = \\".foo {\\\\n    background: #f3f3f3;\\\\n}\\\\n\\";

var scoped = {\\"foo\\":\\"main-module_foo__alNSp\\"};

const index = () => {
    const el1 = document.createElement('div');
    el1.innerHTML = css_248z;
    const el2 = document.createElement('div');
    el2.className = scoped.foo;
};

exports.index = index;
"
`;

exports[`fixtures build fixtures/no-modern 1`] = `
"Tree:
no-modern
  dist
    index.js
    index.js.map
    index.mjs
    index.mjs.map
  package.json
  src
    foo.ts
    index.ts

Output:
"
`;

exports[`fixtures build fixtures/no-modern 2`] = `
"const foo = () => 'foo';

function foobar() {
    return foo() + 'bar';
}

export { foobar };
//# sourceMappingURL=index.mjs.map
"
`;

exports[`fixtures build fixtures/no-modern 3`] = `
"'use strict';

const foo = () => 'foo';

function foobar() {
    return foo() + 'bar';
}

exports.foobar = foobar;
//# sourceMappingURL=index.js.map
"
`;

exports[`fixtures build fixtures/no-sourcemap 1`] = `
"Tree:
no-sourcemap
  dist
    index.js
    index.mjs
  package.json
  src
    foo.ts
    index.ts

Output:
"
`;

exports[`fixtures build fixtures/no-sourcemap 2`] = `
"const foo = () => 'foo';

function foobar() {
    return foo() + 'bar';
}

export { foobar };
"
`;

exports[`fixtures build fixtures/no-sourcemap 3`] = `
"'use strict';

const foo = () => 'foo';

function foobar() {
    return foo() + 'bar';
}

exports.foobar = foobar;
"
`;

exports[`fixtures build fixtures/simple 1`] = `
"Tree:
simple
  dist
    index.js
    index.js.map
    index.mjs
    index.mjs.map
  package.json
  src
    foo.ts
    index.ts

Output:
"
`;

exports[`fixtures build fixtures/simple 2`] = `
"const foo = () => 'foo';

function foobar() {
    return foo() + 'bar';
}

export { foobar };
//# sourceMappingURL=index.mjs.map
"
`;

exports[`fixtures build fixtures/simple 3`] = `
"'use strict';

const foo = () => 'foo';

function foobar() {
    return foo() + 'bar';
}

exports.foobar = foobar;
//# sourceMappingURL=index.js.map
"
`;
